crates/cli/tests/snapshots/task_done_snapshots__task_done_idempotent.snap
---
source: crates/cli/tests/task_done_snapshots.rs
expression: "pretty(&String::from_utf8(out.stdout).unwrap())"
---
{
  "data": {
    "changeId": "demo",
    "currentStatus": "done",
    "previousStatus": "done",
    "taskDescription": "Already",
    "taskId": "1.1"
  },
  "error": null,
  "ok": true,
  "requestId": "req_00000000000000000000000000000000",
  "warnings": []
}
