crates/cli/tests/snapshots/task_done_snapshots__task_done_not_found.snap
---
source: crates/cli/tests/task_done_snapshots.rs
expression: "pretty(&String::from_utf8(out.stdout).unwrap())"
---
{
  "data": null,
  "error": {
    "code": "task.not_found",
    "details": {},
    "message": "provider error: task '1.99' not found"
  },
  "ok": false,
  "requestId": "req_00000000000000000000000000000000",
  "warnings": []
}
